# blogs-post

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  blogpost.dockerfile  create_db.sql  docker-compose.yaml  gunicorn_config.py  pyproject.toml  readme.md  requirements.txt  run.sh
blogpost/: asgi.py  manage.py  settings.py  urls.py  utils.py  wsgi.py
blogpost/apps/posts/: apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
blogpost/apps/posts/migrations/: 0001_initial.py  0002_alter_post_updated.py
blogpost/apps/users/: apps.py  authentication.py  filters.py  models.py  password.py  permissions.py  serializers.py  urls.py  views.py
blogpost/apps/users/migrations/: 0001_initial.py
blogpost/blogpost/: settings.py  urls.py  utils.py
blogpost/posts/: models.py  serializers.py  views.py
blogpost/posts/migrations/: 0001_initial.py  0002_alter_post_updated.py
blogpost/tests/: conftest.py  test_create_user.py  test_post.py  test_user.py
blogpost/tests/functional/: Blog Post.postman_collection.json
blogpost/users/: authentication.py  models.py  serializers.py  views.py
blogpost/users/migrations/: 0001_initial.py  0002_alter_user_password.py
blogpost/utils/: auth.py  id.py  permission.py  token.py
tests/: Blog Post.postman_collection.json
